# pytorch

./: .clang-tidy  .gdbinit  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  b.sh  pyproject.toml  setup.py
_demos/: t0.build.sh  t0_build.sh
aten/src/ATen/: CMakeLists.txt
aten/src/ATen/native/: BlasKernel.cpp
c10/util/: Half-inl.h  Half.h
c10/xpu/: XPUFunctions.cpp
caffe2/: CMakeLists.txt
cmake/Modules/: FindSYCLToolkit.cmake
cmake/public/: xpu.cmake
demos/: CMakeLists.txt  compile_commands.json  demo.cpp  demo.py  demo2.cpp  demo3.cpp  mnist.cpp  t.sh  test_lt_infer.py  test_lt_train.py
demos/slide/: log.sh  slide.md  target_0_add.py  target_1_add_func.py  target_2_print.py  target_3_if.py  target_4_module.py
slide/: slide.html  slide.md
slide/examples/: onnxrt_add.py  onnxrt_add_print.py  run.sh  target_0_add.py  target_1_add_func.py  target_2_print.py  target_3_func_print.py  target_3_if.py  target_3_if_2.py  target_4_module.py
test/cpp/lazy/: test_lazy_ops.cpp  test_lazy_ops_util.cpp
test/lazy/: test_extract_compiled_graph.py  test_ts_opinfo.py
tools/setup_helpers/: cmake.py
torch/_dynamo/: config.py  convert_frame.py  eval_frame.py  output_graph.py  symbolic_convert.py
torch/_dynamo/backends/: onnxrt.py
torch/_lazy/: extract_compiled_graph.py
torch/_logging/: _internal.py
torch/csrc/dynamo/: eval_frame.c
torch/csrc/jit/: jit_log.h
torch/csrc/jit/runtime/: graph_executor.cpp
torch/csrc/lazy/: test_demo.py  test_mnist.py
torch/csrc/lazy/core/: ir_builder.h  ir_util.cpp  (+1 more)
torchgen/: model.py
(+7 files in other folders)
